--- a/css/style.css
+++ b/css/style.css
@@ -1,82 +1,106 @@
 *{
-  margin: 0;
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
- 
 }
 body{
   background-image: url(https://images.unsplash.com/photo-1593305841991-05c297ba4575?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2714&q=80);  
   background-size: 1440px 1000px;
   background-repeat: no-repeat;
 }
-
-.main-wrapper{
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+img{
+  max-width: 100%;
+  box-shadow: 0 0 50px rgba(187, 11, 222, 0.5)
 }
+
+/* BODY */
 
 .container{
-  width: 60%;
-  height: 60%;
-  margin: 0 auto;
-  background-color: antiquewhite;
-}
-.slider{
   position: relative;
-  height: 100%;
-  overflow: hidden;
-
+  height: 100vh;
+ 
+  
+  
 }
 
-.items-wrapper{
-  height:100%;
-
+.slider{
+  width: 70vw;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  
+  
 }
-.items-wrapper img{
+
+.item{
   width: 100%;
   height: 100%;
+  display: none; 
+}
+
+.item>img{
+  height: 70vh;
+  width: calc(70vw - 150px);
   object-fit: cover;
-
+  
 }
 
-/* Stile dei bottoni "up" e "down" */
-.btn-arrow {
+.prev, .next{
   position: absolute;
-  background-color:transparent;
-  color: white;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  border-radius: 50%;
+  left: 50%;
+  background-color: rgba(255, 254, 254, 0.5);
   text-align: center;
-}
-
-.btn-arrow.up {
-  left: 50%;
-  top: 10px; 
+  cursor: pointer;
   transform: translateX(-50%);
-  color: aliceblue;
+  height: 20px;
+  width: 20px;
+  line-height: 22px;
+  border-radius: 50%;
 }
 
-.btn-arrow.down {
-  left: 50%;
-  bottom: 10px; 
-  transform: translateX(-50%);
-  color: aliceblue;
+.prev{
+  top: 10px;
 }
 
+.next{
+  bottom: 10px;
+}
 
- 
+.prev:hover,
+.next:hover{
+  background-color:  rgba(240, 240, 240, 1);
+}
 
+.active{
+  display: block;
+}
 
+.hidden {
+  display: none;
+}
 
+.thumbnail{
+  position: relative;
+  max-width: 150px ;
+  height: 100%;
+  background-color: rgb(3, 3, 3);
+}
 
+.thumb{
+  height: calc(70vh / 5);
+  opacity: 0.5;
+  cursor: pointer;
+}
 
+.preview{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
 
-
-
-
-
-
+.thumb-active{
+  border: 1px white solid;
+  opacity: 1;
+}
